# PixelGameEngine-Template-Project

./: .gitignore  README.md  build.bat  clean.bat  run.bat
env/: CMakeLists.txt
src/: main.cpp
